--- a/nuxt-color/assets/styles.scss
+++ b/nuxt-color/assets/styles.scss
@@ -46,7 +46,21 @@ body {
     min-height: 100px;
     min-width: 100px;
     border-radius: 7px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     cursor: pointer;
+    .bigbox-copied {
+        padding: 5px 15px;
+        border-radius: 3px;
+        background-color: rgba(0, 0, 0, .8);
+    }
+    .fade-enter-active, .fade-leave-active {
+        transition: opacity .8s
+    }
+    .fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
+        opacity: 0
+    }
 }
 
 select {
